--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,5 +9,9 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
+# BT profiles (n+1 profiles for split boards. So 3 equals 2 usable profiles.)
+CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_PAIRED=3
+
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
