--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,8 +6,8 @@
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Uncomment enable eager debouncing
-# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
-# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
 # BT profiles (n+1 profiles for split boards. So 3 equals 2 usable profiles.)
 CONFIG_BT_MAX_CONN=3
