--- a/config/corne.conf
+++ b/config/corne.conf
@@ -15,3 +15,8 @@ CONFIG_BT_MAX_PAIRED=3
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
+
+# nice view display config settings
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_FUTURAMA_SUS_ANIMATION=n
