--- a/build.yaml
+++ b/build.yaml
@@ -21,8 +21,10 @@
 include:
   - board: nice_nano_v2
     # shield: corne_left nice_view_adapter nice_view
-    shield: corne_left nice_view_adapter nice_futurama_sus
+    # shield: corne_left nice_view_adapter nice_futurama_sus
+    shield: corne_left nice_view_adapter nice_view_gem
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     # shield: corne_right nice_view_adapter nice_view
-    shield: corne_right nice_view_adapter nice_futurama_sus
+    # shield: corne_right nice_view_adapter nice_futurama_sus
+    shield: corne_right nice_view_adapter nice_view_gem
