--- a/config/corne.conf
+++ b/config/corne.conf
@@ -20,3 +20,4 @@ CONFIG_BT_MAX_PAIRED=3
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_NICE_VIEW_GEM_ANIMATION=y
+CONFIG_NICE_VIEW_GEM_ANIMATION_MS=1920
