--- a/build.yaml
+++ b/build.yaml
@@ -22,9 +22,10 @@ include:
   - board: nice_nano_v2
     # shield: corne_left nice_view_adapter nice_view
     # shield: corne_left nice_view_adapter nice_futurama_sus
-    shield: corne_left nice_view_adapter nice_view_gem
-    snippet: studio-rpc-usb-uart
+    shield: corne_left nice_view_adapter nice_luffy_gear_five
+    # shield: corne_left nice_view_adapter nice_view_gem
   - board: nice_nano_v2
     # shield: corne_right nice_view_adapter nice_view
     # shield: corne_right nice_view_adapter nice_futurama_sus
-    shield: corne_right nice_view_adapter nice_view_gem
+    shield: corne_right nice_view_adapter nice_luffy_gear_five
+    # shield: corne_right nice_view_adapter nice_view_gem
