--- a/config/corne.conf
+++ b/config/corne.conf
@@ -19,5 +19,5 @@ CONFIG_BT_MAX_PAIRED=3
 # nice view display config settings
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-CONFIG_NICE_VIEW_GEM_ANIMATION=n
+# CONFIG_NICE_VIEW_GEM_ANIMATION=n
 # CONFIG_NICE_VIEW_GEM_ANIMATION_MS=1920
