--- a/config/west.yml
+++ b/config/west.yml
@@ -11,7 +11,7 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: nice-view-gem
+    - name: nice-luffy-gear-five
       remote: NoahHakansson
       revision: main
   self:
